--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
 
   <nav>
     <div class="nav-wrapper orange">
-      <a href="{% url 'home' %}" class="brand-logo">Realmatismo FC</a>
+      <a href="{% url 'home' %}" class="brand-logo">Realmatismo</a>
       <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
       <ul class="right hide-on-med-and-down">
           <li><a href="{% url 'jogos' %}">Jogos</a></li>
