Layout pagina detalhes atletas

--- a/jogo/templates/jogo/home.html
+++ b/jogo/templates/jogo/home.html
@@ -18,6 +18,14 @@
                     {{ teste }}%
                 </span>
                 <div class="clearfix"></div>
+
+                 <span style="margin: 10px; padding: 10px;" >
+                    Sequência Vitória :
+                </span>
+                <span style="margin: 10px; padding: 10px; color: {% if teste >= 50 %}green{% else %}red{% endif %}" >
+                    {{ sequencia }}%
+                </span>
+
             </div>
         </div>
      </div>
