Layout pagina detalhes atletas

--- a/jogo/templates/jogo/home.html
+++ b/jogo/templates/jogo/home.html
@@ -22,8 +22,8 @@
                  <span style="margin: 10px; padding: 10px;" >
                     Sequência Vitória :
                 </span>
-                <span style="margin: 10px; padding: 10px; color: {% if teste >= 50 %}green{% else %}red{% endif %}" >
-                    {{ sequencia }}%
+                <span style="margin: 10px; padding: 10px;" >
+                    {{ sequencia }}
                 </span>
 
             </div>
