Menu voltando a funicionar

--- a/jogo/templates/jogo/atleta_detalhe.html
+++ b/jogo/templates/jogo/atleta_detalhe.html
@@ -16,7 +16,7 @@
 
         <div class="row">
             <div class="col s12 m5 l8">
-                <div class="card-panel orange">
+                <div class="card-panel orange"  style="background: linear-gradient(45deg, #ff9800 0%, #ffe0b2 100%);">
                     <span style="font-size: 17px" class="white-text">Nome: {{ atleta.nome }}</span>
                 <br/>
                     <span style="font-size: 17px"  class="white-text"> Sobrenome: {{ atleta.sobrenome }} </span>
@@ -42,42 +42,42 @@
         <h4 class="col s12 center-align">Dados</h4>
 
         <div class="col s6">
-            <div class="card-panel blue accent-1 center-align z-depth-2">
+            <div class="card-panel blue accent-1 center-align z-depth-2"  style="background: linear-gradient(45deg, #00b0ff 0%, #ffe0b2 100%);">
                 <span style="font-size: 16px; font-weight: bold">Jogos</span><br>
                 <span style="font-size: 18px">{{ atleta.jogos_realizados }}</span>
             </div>
         </div>
 
         <div class="col s6">
-          <div class="card-panel blue accent-1 center-align z-depth-2">
+          <div class="card-panel blue accent-1 center-align z-depth-2" style="background: linear-gradient(45deg, #00b0ff 0%, #ffe0b2 100%);">
                 <span style="font-size: 16px; font-weight: bold">Gols/Média</span><br>
                 <span style="font-size: 18px">{{ atleta.gols }} / {{ atleta.media_gols }}</span>
             </div>
         </div>
 
         <div class="col s6">
-            <div class="card-panel blue accent-1 center-align z-depth-2">
+            <div class="card-panel blue accent-1 center-align z-depth-2" style="background: linear-gradient(45deg, #00b0ff 0%, #ffe0b2 100%);">
                 <span style="font-size: 16px; font-weight: bold">Assist./Média</span><br>
                 <span style="font-size: 18px">{{ atleta.assistencia }} / {{ atleta.media_assistencia }}</span>
             </div>
         </div>
 
         <div class="col s6">
-            <div class="card-panel blue accent-1 center-align z-depth-2">
+            <div class="card-panel blue accent-1 center-align z-depth-2" style="background: linear-gradient(45deg, #00b0ff 0%, #ffe0b2 100%);">
                 <span style="font-size: 16px; font-weight: bold">Defesas/Média</span><br>
                 <span style="font-size: 18px">{{ atleta.defesa }} / {{ atleta.media_defesa }}</span>
             </div>
         </div>
 
         <div class="col s6">
-            <div class="card-panel blue accent-1 center-align z-depth-2">
+            <div class="card-panel blue accent-1 center-align z-depth-2" style="background: linear-gradient(45deg, #00b0ff 0%, #ffe0b2 100%);">
                 <span style="font-size: 16px; font-weight: bold">Minutos</span><br>
                 <span style="font-size: 18px">{{ atleta.minutos}}</span>
             </div>
         </div>
 
          <div class="col s6">
-            <div class="card-panel blue accent-1 center-align z-depth-2">
+            <div class="card-panel blue accent-1 center-align z-depth-2" style="background: linear-gradient(45deg, #00b0ff 0%, #ffe0b2 100%);">
                 <span style="font-size: 16px; font-weight: bold">Aproveitamento</span><br>
                 <span style="font-size: 18px">{{ atleta.taxa_presente }}</span>
             </div>
