--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
    <!-- Compiled and minified CSS -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+    <link href="/assets/css/.min.css?v=2.1.1" rel="stylesheet" />
+
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
           integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 {#    <link rel="stylesheet" href="{% static 'css/materialize.min.css' %}">#}
@@ -35,7 +38,6 @@
           <li><a href="{% url 'noticias' %}">Notícias</a></li>
           <li><a href="{% url 'galeria' %}">Fotos</a></li>
           <li><a href="{% url 'contato' %}">Contato</a></li>
-
       </ul>
     </div>
   </nav>
